# open-patients-2

./: .gitignore  README.md  pyproject.toml  setup.sh
configs/: usmle_mapping.json
configs/runs/: baichuan-m3.yaml  medgemma-27b-text-it.yaml  qwen3-235b-a22b.yaml
configs/schemas/: schema.json
src/cli/: bench.py  bench_replicas.py  check_prompt.py  enrich.py  launch.py  push_to_hf.py  test_runner.py  usmle_map.py
src/core/: config.py  extraction.py  llm_vllm.py  prompts.py  schema_loader.py  utils.py  writer.py
src/utils/: usmle_mappings.py  utils.py
tests/: test_cli_overrides.py  test_config.py  test_extraction.py  test_prompts.py  test_schema_loader.py  test_schema_loader_arrays.py  test_usmle_map.py  test_writer.py
