[project]
name = "open-patients-plus"
version = "0.1.0"
description = "Enrich ncbi/Open-Patients notes into an indexable JSONL dataset using vLLM."
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
  "datasets>=2.18.0",
  "tqdm>=4.66.0",
  "huggingface_hub>=0.23.0",
  "pyyaml>=6.0"
]

[project.optional-dependencies]
vllm = [
  "vllm>=0.4.0; platform_system == 'Linux' and (platform_machine == 'x86_64' or platform_machine == 'aarch64')",
]


[project.scripts]
open-patients-worker = "src.cli.enrich:main"
open-patients-replicas = "src.cli.launch:main"
open-patients-bench = "src.cli.bench:main"
open-patients-bench-replicas = "src.cli.bench_replicas:main"
open-patients-usmle-map = "src.cli.usmle_map:main"
open-patients-push = "src.cli.push_to_hf:main"
open-patients-test = "src.cli.test_runner:main"

[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
